fix: # da musica na tabela not showing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -30,7 +30,7 @@ body, html {
 }
 
 .logo-home {
-	width: 330px;
+	width: 350px;
 	margin-bottom: 40px;
 }
 
